# ArcaneWeaver

./: .gitignore  README.md  pyproject.toml
src/arcaneweaver/core/entity_system/: components.py
tests/: __init__.py  test_components.py
